# Thermal-conduction

./: .gitignore  CMakeLists.txt  README.md
include/: BoundaryCondition.hpp  Calculator.hpp  DirichletBC.hpp  Grid.hpp  Material.hpp  NeumannBC.hpp  Point_2D.hpp  RobinBC.hpp  Side.hpp  Simulation.hpp  Visualizer.hpp
src/: Calculator.cpp  DirichletBC.cpp  Material.cpp  Neumann.cpp  NeumannBC.cpp  RobinBC.cpp  Simulation.cpp  Visualizer.cpp  main.cpp
